@startuml
class User {
  +id: string
  +email: string
  +name: string
  +role: UserRole
  +preferences: json
}

class ModelConfig {
  +displayName: string
  +baseUrl: string
  +modelName: string
  +providerId: string
  +encryptedApiKey: string
  +supportsTools: boolean
  +isDefault: boolean
}

class Project {
  +name: string
  +description: string
  +sourceType: ProjectSourceType
  +gitUrl: string
  +workspacePath: string
}

class Session {
  +title: string
  +status: SessionStatus
}

class Message {
  +role: MessageRole
  +content: string
  +metadata: json
}

class ConversationSummary {
  +content: string
  +tokenEstimate: number
}

class Plan {
  +status: PlanStatus
  +summary: string
}

class PlanStep {
  +order: number
  +title: string
  +detail: string
  +status: PlanStepStatus
}

class ToolCall {
  +name: string
  +arguments: json
  +status: ToolCallStatus
  +requiresApproval: boolean
  +resultText: string
}

class ToolApproval {
  +status: ApprovalStatus
  +reason: string
}

class FilePatch {
  +relativePath: string
  +originalContent: string
  +patchedContent: string
  +diffText: string
  +status: FilePatchStatus
}

class CommandRun {
  +command: string
  +cwd: string
  +exitCode: number
  +stdout: string
  +stderr: string
  +status: CommandRunStatus
}

class CommandPolicyConfig {
  +id: string
  +enabledPresets: json
  +customCommands: json
}

class ProjectCommandPermission {
  +command: string
}

class AuditLog {
  +action: string
  +resourceType: string
  +resourceId: string
  +metadata: json
}

User "1" --> "*" ModelConfig
User "1" --> "*" Project
User "1" --> "*" Session
User "1" --> "*" AuditLog
Project "1" --> "*" Session
Project "1" --> "*" FilePatch
Project "1" --> "*" CommandRun
Project "1" --> "*" ProjectCommandPermission
Session "1" --> "*" Message
Session "1" --> "*" ConversationSummary
Session "1" --> "*" Plan
Session "1" --> "*" ToolCall
Session "*" --> "0..1" ModelConfig : active
Plan "1" --> "*" PlanStep
ToolCall "1" --> "0..1" ToolApproval
ToolCall "1" --> "*" FilePatch
ToolCall "1" --> "0..1" CommandRun
User "1" --> "*" ToolApproval : requester/approver
User "1" --> "*" ProjectCommandPermission : createdBy
@enduml
